# opengl

./: CMakeLists.txt  glad.c  sample.cpp  sample_pan.cpp  v_shad.cpp
include/: shader_s.h
include/glad/: glad.h
